maze.lessons.maze.island.IslandMaze.scala.error
Escaper:26: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
				case Direction.NORTH => if(!=estFaceMur()) avance()
                                                           ^